--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
   <script></script>
 
   <body>
+    <div class="modal-backdrop"></div>
+    <div class="modal-overlay">
+      <div>
+        <div><h3>Registration Successfully</h3></div>
+        <div class="succesful"><img src="./img/done.png" alt="" /></div>
+        <div><button class="close-btn">CLose</button></div>
+      </div>
+    </div>
     <section class="header">
       <nav>
         <a class="logo" href="index.html">Kon<span>nect</span></a>
@@ -37,7 +45,7 @@
         </div>
         <div class="form-container">
           <div class="mini-container">
-            <form>
+            <form class="form">
               <div>
                 <label for="name"> Full Name </label>
                 <input type="text" id="name" required />
@@ -64,7 +72,7 @@
                 <input type="password" id="password" required />
               </div>
 
-              <button>Register</button>
+              <button type="submit">Register</button>
               <p>Contact the <a href="#"> help center </a> for assistance.</p>
             </form>
           </div>
