--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
   <script></script>
 
   <body>
+    <div class="page-loader">
+      <img src="./img/load.gif" alt="" />
+    </div>
     <div class="modal-backdrop"></div>
     <div class="modal-overlay">
       <div>
         <div><h3>Registration Successfully</h3></div>
         <div class="succesful"><img src="./img/done.png" alt="" /></div>
-        <div><button class="close-btn">CLose</button></div>
+        <div class="btn-container">
+          <button class="close-btn">Close</button>
+        </div>
       </div>
     </div>
     <section class="header">
